# gcp-fileserver

./: .flake8  .gitignore  README.md  pyproject.toml
pokegan_server/: .gcloudignore  main.py  requirements.txt
tests/: test_pokegan_server.py
