[tool.poetry]
name = "pokegan-server"
version = "0.1.0"
description = ""
authors = ["alexgQQ <alex.grand@beatport.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
google-cloud-storage = "^1.38.0"
Pillow = "^8.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
python-dotenv = "^0.17.1"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
